--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             padding: 20px;
         }
         .container {
-            background: linear-gradient(to right, #4facfe, #00f2fe);
+/*             background: linear-gradient(to right, #4facfe, #00f2fe); */
             max-width: 600px;
             background: rgba(0, 0, 0, 0.7);
             padding: 40px;
