--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
             box-sizing: border-box;
             font-family: Arial, sans-serif;
         }
-        body {
+        .body {
+            background: linear-gradient(to right, #4facfe, #00f2fe);
             display: flex;
             justify-content: center;
             align-items: center;
@@ -21,7 +22,6 @@
             padding: 20px;
         }
         .container {
-/*             background: linear-gradient(to right, #4facfe, #00f2fe); */
             max-width: 600px;
             background: rgba(0, 0, 0, 0.7);
             padding: 40px;
@@ -54,11 +54,13 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Earn up to more than $20 per day with DyvGames</h1>
-        <p>It's simple! Just share your DyvGames affiliate link and earn up to $20 per day. And it's real!</p>
-        <p>Click the button below to get started.</p>
-        <a href="#" class="btn">Start Now</a>
-    </div>
+    <div class="body">
+        <div class="container">
+            <h1>Earn up to more than $20 per day with DyvGames</h1>
+            <p>It's simple! Just share your DyvGames affiliate link and earn up to $20 per day. And it's real!</p>
+            <p>Click the button below to get started.</p>
+            <a href="#" class="btn">Start Now</a>
+        </div>
+    </div>div
 </body>
 </html>
