--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
             box-sizing: border-box;
             font-family: Arial, sans-serif;
         }
+        body{
+            padding: 20px;
+        }
         .body {
             background: linear-gradient(to right, #4facfe, #00f2fe);
             display: flex;
