--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             font-family: Arial, sans-serif;
         }
         body{
-            padding: 20px;
+            padding: 2vmax;
         }
         .body {
             background: linear-gradient(to right, #4facfe, #00f2fe);
@@ -64,6 +64,6 @@
             <p>Click the button below to get started.</p>
             <a href="#" class="btn">Start Now</a>
         </div>
-    </div>div
+    </div>
 </body>
 </html>
