--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             text-align: center;
             color: white;
             padding: 20px;
+            max-width: 1000px;
         }
         .container {
             max-width: 600px;
