--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
         }
         body{
             padding: 2vmax;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
         .body {
             background: linear-gradient(to right, #4facfe, #00f2fe);
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            max-height: 100vh;
             text-align: center;
             color: white;
             padding: 20px;
