--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         .container {
             max-width: 600px;
             background: rgba(0, 0, 0, 0.7);
-            padding: 40px;
+            padding: 4vmax 8vmax;
             border-radius: 15px;
             box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
         }
