--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
             max-height: 100vh;
             text-align: center;
             color: white;
-            padding: 20px;
+            padding: 20vmax 40vmax;
             max-width: 1000px;
         }
         .container {
             max-width: 600px;
             background: rgba(0, 0, 0, 0.7);
-            padding: 4vmax 8vmax;
+            padding: 4vmax;
             border-radius: 15px;
             box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
         }
