--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             max-height: 100vh;
             text-align: center;
             color: white;
-            padding: 20vmax 40vmax;
+            padding: 5vmax;
+            min-width: 70%;
             max-width: 1000px;
         }
         .container {
