--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             max-width: 1000px;
         }
         .container {
+            min-width: 90%;
             max-width: 600px;
             background: rgba(0, 0, 0, 0.7);
             padding: 4vmax;
