--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <h1>Earn up to more than $20 per day with DyvGames</h1>
             <p>It's simple! Just share your DyvGames affiliate link and earn up to $20 per day. And it's real!</p>
             <p>Click the button below to get started.</p>
-            <a href="#" class="btn">Start Now</a>
+            <a href="https://www.dyvgames.com/pages/signup?prom=true" class="btn">Start Now</a>
         </div>
     </div>
 </body>
