--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
     </style>
 </head>
 <body>
+
+    <div style="">
+        <img src="https://www.dyvgames.com/header/images/logoD.png">
+        <span>DyvGames</span>
+    </div>
+    
     <div class="body">
         <div class="container">
             <h1>Earn up to more than $20 per day with DyvGames</h1>
