--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 </head>
 <body>
 
-    <div style="">
-        <img src="https://www.dyvgames.com/header/images/logoD.png">
+    <div style="width: 100%; display: flex">
+        <img src="https://www.dyvgames.com/header/images/logoD.png" width="100" height="50">
         <span>DyvGames</span>
     </div>
     
