--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 </head>
 <body>
 
-    <div style="width: 100%; display: flex">
+    <div style="width: 100%; display: flex; align-items: center">
         <img src="https://www.dyvgames.com/header/images/logoD.png" width="100" height="50">
-        <span>DyvGames</span>
+        <span style="font-weight: bold">DyvGames</span>
     </div>
     
     <div class="body">
