--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <div style="width: 100%; display: flex; align-items: center">
         <img src="https://www.dyvgames.com/header/images/logoD.png" width="100" height="50">
-        <span style="font-weight: bold">DyvGames</span>
+        <span style="font-weight: bold; font-size: 18px; margin-left: 5px">DyvGames</span>
     </div>
     
     <div class="body">
