--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             display: inline-block;
             padding: 12px 25px;
             font-size: 20px;
-            background: #ff9800;
+            background:  #1f7afe;
             color: white;
             text-decoration: none;
             border-radius: 8px;
@@ -67,7 +67,7 @@
 
     <div style="width: 100%; display: flex; align-items: center">
         <img src="https://www.dyvgames.com/header/images/logoD.png" width="100" height="50">
-        <span style="font-weight: bold; font-size: 18px; margin-left: 5px">DyvGames</span>
+        <span style="font-weight: bold; font-size: 20px; margin-left: 10px">DyvGames</span>
     </div>
     
     <div class="body">
