--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             display: inline-block;
             padding: 12px 25px;
             font-size: 20px;
+            font-weight: bold;
             background:  #1f7afe;
             color: white;
             text-decoration: none;
