--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             padding: 12px 25px;
             font-size: 20px;
             font-weight: bold;
-            background: #61a0fa;
+            background: #004dff;
             color: white;
             text-decoration: none;
             border-radius: 8px;
@@ -66,7 +66,7 @@
 </head>
 <body>
 
-    <div style="width: 100%; display: flex; align-items: center; margin-bottom: 3vmin">
+    <div style="width: 100%; display: flex; align-items: center; margin-bottom: 6vmin">
         <img src="https://www.dyvgames.com/header/images/logoD.png" width="100" height="50">
         <span style="font-weight: bold; font-size: 20px; margin-left: 10px">DyvGames</span>
     </div>
