--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             padding: 12px 25px;
             font-size: 20px;
             font-weight: bold;
-            background: #004dff;
+            background: orangered/*#004dff*/;
             color: white;
             text-decoration: none;
             border-radius: 8px;
