--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             text-decoration: none;
             border-radius: 8px;
             transition: background 0.3s ease-in-out;
+            text-shadow: 1px 1px black;
         }
         .btn:hover {
             background: #e68900;
