--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             border-radius: 8px;
             transition: background 0.3s ease-in-out;
             text-shadow: 1px 1px black;
+            box-shadow: 5px 5px black;
         }
         .btn:hover {
             background: #e68900;
