--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
             padding: 12px 25px;
             font-size: 20px;
             font-weight: bold;
-            background: orangered/*#004dff*/;
+            background: green/*#004dff*/;
             color: white;
             text-decoration: none;
             border-radius: 8px;
             transition: background 0.3s ease-in-out;
             text-shadow: 1px 1px black;
-            box-shadow: 5px 5px black;
+            box-shadow: 2px 2px black;
         }
         .btn:hover {
             background: #e68900;
