--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
         }
         h1 {
-            font-size: 32px;
+            font-size: 35px;
             margin-bottom: 15px;
             font-weight: bold;
         }
@@ -53,13 +53,13 @@
             padding: 12px 25px;
             font-size: 20px;
             font-weight: bold;
-            background: green/*#004dff*/;
+            background:  #13ff00/*#004dff*/;
             color: white;
             text-decoration: none;
             border-radius: 8px;
             transition: background 0.3s ease-in-out;
             text-shadow: 1px 1px black;
-            box-shadow: 2px 2px black;
+            box-shadow: 3px 3px black;
         }
         .btn:hover {
             background: #e68900;
