--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            background: url("https://images.pexels.com/photos/259249/pexels-photo-259249.jpeg?auto=compress&cs=tinysrgb&w=600")
         }
         .body {
             background: linear-gradient(to right, #4facfe, #00f2fe);
@@ -53,7 +54,7 @@
             padding: 12px 25px;
             font-size: 20px;
             font-weight: bold;
-            background:  #13ff00/*#004dff*/;
+            background:   #1bc80d/*#004dff*/;
             color: white;
             text-decoration: none;
             border-radius: 8px;
