--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background: url("https://images.pexels.com/photos/259249/pexels-photo-259249.jpeg?auto=compress&cs=tinysrgb&w=600")
+            background: url("https://images.pexels.com/photos/259249/pexels-photo-259249.jpeg?auto=compress&cs=tinysrgb&w=600");
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center
         }
         .body {
             background: linear-gradient(to right, #4facfe, #00f2fe);
