--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             transition: background 0.3s ease-in-out;
             text-shadow: 1px 1px black;
             box-shadow: 3px 3px black;
+            color: black
         }
         .btn:hover {
             background: #e68900;
@@ -74,7 +75,7 @@
 
     <div style="width: 100%; display: flex; align-items: center; margin-bottom: 6vmin">
         <img src="https://www.dyvgames.com/header/images/logoD.png" width="100" height="50">
-        <span style="font-weight: bold; font-size: 20px; margin-left: 10px">DyvGames</span>
+        <span style="font-weight: bold; font-size: 20px; margin-left: 10px; color: white">DyvGames</span>
     </div>
     
     <div class="body">
