--- a/index.html
+++ b/index.html
@@ -62,9 +62,8 @@
             text-decoration: none;
             border-radius: 8px;
             transition: background 0.3s ease-in-out;
-            text-shadow: 1px 1px black;
+            text-shadow: 2px 2px black;
             box-shadow: 3px 3px black;
-            color: black
         }
         .btn:hover {
             background: #e68900;
@@ -75,7 +74,7 @@
 
     <div style="width: 100%; display: flex; align-items: center; margin-bottom: 6vmin">
         <img src="https://www.dyvgames.com/header/images/logoD.png" width="100" height="50">
-        <span style="font-weight: bold; font-size: 20px; margin-left: 10px; color: white">DyvGames</span>
+        <span style="font-weight: bold; font-size: 20px; margin-left: 10px; color: white; text-shadow: 3px 3px black">DyvGames</span>
     </div>
     
     <div class="body">
