--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <div style="width: 100%; display: flex; align-items: center; margin-bottom: 6vmin">
         <img src="https://www.dyvgames.com/header/images/logoD.png" width="100" height="50">
-        <span style="font-weight: bold; font-size: 20px; margin-left: 10px; color: white; text-shadow: 1px 1px black">DyvGames</span>
+        <span style="font-weight: bold; font-size: 20px; margin-left: 10px;">DyvGames</span>
     </div>
     
     <div class="body">
