--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             background: url("https://images.pexels.com/photos/259249/pexels-photo-259249.jpeg?auto=compress&cs=tinysrgb&w=600");
             background-repeat: no-repeat;
             background-size: cover;
-            background-position: center
+            background-position: center;
+            min-height: 100vh;
         }
         .body {
             background: linear-gradient(to right, #4facfe, #00f2fe);
