--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     
     <div class="body">
         <div class="container">
-            <h1>Earn up to more than $20 per day with DyvGames</h1>
+            <h1>Earn up to over $20 a day with the DyvGames affiliate program</h1>
             <p>It's simple! Just share your DyvGames affiliate link and earn up to $20 per day. And it's real!</p>
             <p>Click the button below to get started.</p>
             <a href="https://www.dyvgames.com/pages/signup?prom=true" class="btn">Start Now</a>
