--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <h1>Earn up to over $20 a day with the DyvGames affiliate program ($2 welcome gift)</h1>
             <p>It's simple! Just share your DyvGames affiliate link and earn up to $20 per day. And it's real!</p>
             <p>Click the button below to get started.</p>
-            <a href="https://www.dyvgames.com/pages/signup?prom=true" class="btn">Start Now</a>
+            <a target="_blank" href="https://www.dyvgames.com/pages/signup?prom=true" class="btn">Start Now</a>
         </div>
     </div>
 </body>
